1992-02-18  dickey@software.org

	* src/README: *** empty log message ***

	* src/dedring.c, src/ftree.c, src/dedname.c: lint

1992-02-17  dickey@software.org

	* src/version.h:
	make directory-renaming work properly by renaming file-lists
	as well.

	* src/ftree.c: broke out 'is_subpath()' -- need this in 'dedrering()'
	use 'dedrering()' to make directory-renaming work properly

	* src/README: cleanup some old nits

	* src/dedring.c:
	added procedure 'dedrering()' to implement directory-list
	renaming.

	* src/dedname.c: make directory-renaming work better with new procedure
	'dedrering()'

	* src/ded.h: added 'dedrering()', some cleanup.

	* src/ftree.c:
	noticed that I had forgotten to implement the '=' command
	(except in database-only).  did so.

	* src/ftree.c:
	modified so that 'R' command will reset 'V' toggle on a node
	if it has no children

	* src/ftree.c: make 'V' toggle work properly if node has no children
	reordered some stuff to make void/int procedures more kosher.

1992-02-06  dickey@software.org

	* src/version.h:
	modified z/Z sort to make it easier to use. Now, 'Z' sorts
	by difference between checkin/modification times.  Also,
	rather than showing only '<' or '>', I show '-' and '+' if
	only one second difference applies -- makes it simpler to
	read when looking at apollo restores.

	* src/dedsort.c:
	modified 'Z' sort to difference between checkin/modification
	dates.

1992-02-04  dickey@software.org

	* src/ded2s.c:
	when ztime/mtime differ by only a second, show + or -, ratehr
	than > or <.

	* src/Makefile, Makefile: *** empty log message ***

	* Makefile, src/Makefile: consistent COPY, GET

1992-01-16  dickey@software.org

	* src/version.h:
	corrected an error in 'dedmake()' which broke replay-logic.
	make 'ded' able to treat argument which is a single file.

	* src/dedmake.c:
	corrected a "little" bug which caused this to screw up the
	state of the replay-logic in 'dedline()' if a user-error
	was found.

1992-01-02  dickey@software.org
