@@ -1,4 +1,4 @@
-MANIFEST for ded, version t19920218
+MANIFEST for ded, version t19920220
 --------------------------------------------------------------------------------
 MANIFEST                        this file
 Makefile                        top-level makefile for unix directory editor
